deploy/k8s/core-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-backend-api
spec:
  selector: {app.kubernetes.io/name: core-backend-api}
  ports: [{port: 80, targetPort: http, name: http}]
